styled form section

--- a/style.css
+++ b/style.css
@@ -23,14 +23,59 @@ body {
     background-attachment: fixed;
     color: white;
     font-family: Roboto;
-    /* display: flex;
+    min-height: 100vh;
+    display: flex;
     flex-direction: column;
-    justify-content: space-around; */
+    justify-content: space-around;
+}
+
+#userCityInputAndUnitForm {
+    padding: 35px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.city-input-container {
+    width: clamp(400px, 90%, 300px);
+    height: 35px;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    border-bottom: 2px solid white;
+}
+
+input#cityInput {
+    background-color: transparent;
+    color: white;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    height: 100%;
+    flex-grow: 1;
+}
+
+input#cityInput:focus,
+input#cityInput:hover {
+    border: none;
+    outline: none;
+}
+
+button.unit-switch-button {
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px 20px;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    border-radius: 10px;
 }
 
 .output-container {
     text-transform: capitalize;
-    padding: 0 30px 0 10px;
+    padding: 10px 30px 40px 10px;
     display: flex;
     justify-content: space-around;
     gap: 40px;
@@ -49,24 +94,11 @@ body {
 .description,
 .temp {
     font-size: 50px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .city-and-country {
     font-size: 25px;
-}
-
-.temp-unit {
-    position: relative;
-    width: fit-content;
-}
-
-.temp-unit.temp::after {
-    position: absolute;
-    font-size: 20px;
-    font-weight: 900;
-    top: 5px;
-    right: -25px;
 }
 
 .extra-info {
@@ -80,6 +112,19 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+.temp-unit {
+    position: relative;
+    width: fit-content;
+}
+
+.temp-unit.temp::after {
+    position: absolute;
+    font-size: 20px;
+    font-weight: 900;
+    top: 5px;
+    right: -25px;
 }
 
 .extra-info .temp-unit::after {
@@ -97,6 +142,7 @@ body {
 .temp-unit.imperial::after {
     content: " °F";
 }
+
 
 @media screen and (max-width: 556px) {
 
