removed images folder form gitignore file and added bg image

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-    background-image: url(./images/bg1.jpg);
+    background-image: url(./images/body-bg-5880x4902.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
