--- a/style.css
+++ b/style.css
@@ -76,6 +76,15 @@ button.unit-switch-button {
     justify-content: space-around;
     gap: 40px;
     flex-wrap: wrap;
+    opacity: 1;
+    transform: scale(1);
+    transition: transform 1s, opacity 1s;
+}
+
+.output-container.hidden {
+    display: none;
+    opacity: 0;
+    transform: scale(0);
 }
 
 .essential-info {
